# ricochetRobots

./: CMakeLists.txt  README.md  board.cpp  board.h  main.cpp  robot.h
doc/: README.md
src/: board.cpp  board.h  input.txt  main  main.cpp  robot.h
test/: testBoard.cpp
test/input/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
